perf: :zap: added list shoppinglist by date interval
