# app/api.go
@@ -21,7 +21,7 @@ func (app *App) InitRoutes() {
 	app.Router.HandleFunc("/recipes/create", app.Auth(app.Authz(app.CreateRecipeHandler))).Methods("POST")
 	app.Router.HandleFunc("/recipes/update", app.Auth(app.Authz(app.UpdateRecipeHandler))).Methods("POST")
 	app.Router.HandleFunc("/recipes/delete", app.Auth(app.Authz(app.DeleteRecipeHandler))).Methods("POST")
-	app.Router.HandleFunc("/shopping/all", app.Auth(app.GetAllShoppingsHandler)).Methods("GET")
+	app.Router.HandleFunc("/shopping/list", app.Auth(app.GetAllShoppingsHandler)).Methods("POST")
 	app.Router.HandleFunc("/shopping/get", app.Auth(app.GetShoppingHandler)).Methods("POST")
 	app.Router.HandleFunc("/shopping/create", app.Auth(app.CreateShoppingHandler)).Methods("POST")
 	app.Router.HandleFunc("/shopping/update", app.Auth(app.UpdateShoppingHandler)).Methods("POST")
