# docs/swagger.json
@@ -325,26 +325,6 @@
                 }
             }
         },
-        "/shopping/all": {
-            "get": {
-                "description": "List All Shopping Lists",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "shopping"
-                ],
-                "summary": "Get shopping lists",
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/shopping/create": {
             "post": {
                 "description": "Create A New Shopping List",
@@ -423,6 +403,37 @@
                 "parameters": [
                     {
                         "description": "Get Shopping List",
+                        "name": "shopping",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/shopping.Shopping"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/shopping/list": {
+            "post": {
+                "description": "List All Shopping Lists",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shopping"
+                ],
+                "summary": "Get shopping lists",
+                "parameters": [
+                    {
+                        "description": "Get shopping lists by date",
                         "name": "shopping",
                         "in": "body",
                         "required": true,
@@ -707,8 +718,8 @@
             "type": "object",
             "properties": {
                 "end_date": {
-                    "type": "string",
-                    "example": "1643743448"
+                    "type": "integer",
+                    "example": 1643743448
                 },
                 "ingredients": {
                     "type": "array",
@@ -717,8 +728,8 @@
                     }
                 },
                 "start_date": {
-                    "type": "string",
-                    "example": "1643743444"
+                    "type": "integer",
+                    "example": 1643743444
                 },
                 "user_id": {
                     "type": "integer",
